# Higgs_analysis

./: README.md
MainAnalysis/: README.md  rc_init.sh
TreeAnalysis/: README.md
TreeAnalysis/source/: CMakeLists.txt
TreeAnalysis/source/app/: RunTMVAClassification.cxx  RunTMVATree.cxx  RundiHiggs.cxx  RundiHiggsInput.cxx  RundiHiggsSubsampler.cxx
TreeAnalysis/source/lib/: diHiggsTMVAClassification.cxx  diHiggsTMVAClassification.h  diHiggsTMVATree.cxx  diHiggsTMVATree.h  diHiggsTreeInput_subsample.cxx  diHiggsTreeInput_subsample.h  diHiggsbbyyTreeAnalysis.cxx  diHiggsbbyyTreeAnalysis.h  diHiggsbbyyTreeInput.cxx  diHiggsbbyyTreeInput.h  enums.h
TreeAnalysis/util/BdtComparator/: bdtComparator.py
TreeAnalysis/util/CutflowAnalizer/: CutFlowAnalyzer.py  cutflow_output.csv
TreeAnalysis/util/HistCompare/: DrawHist_Final.py  DrawHist_Preselec.py
TreeAnalysis/util/HistCompare/AtlasStyle/: AtlasUtils.C
TreeAnalysis/util/TreeInspector/: TreeInspector.py  TreeInspector_v2.py  original_Treeinspector.py  original_Treeinspector_v2.py
